--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [[redirects]]
-  from = "/*"
-  to = "http://homeserver.mariosilvaprada.com/library/:splat"
+  from = "/library/*"
+  to = "http://homeserver.mariosilvaprada.com/:splat"
   status = 200
   force = true
 
