--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
   force = true
 
 [[redirects]]
-  from = "/books/*"
+  from = "/book/*"
   to = "http://homeserver.mariosilvaprada.com/library/books/:splat"
   status = 200
   force = true
