--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [[redirects]]
   from = "/library/*"
   to = "http://homeserver.mariosilvaprada.com/library/:splat"
+  query = {path = ":path"}
   status = 200
   force = true
 
