--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "/library/*"
+  from = "/*"
   to = "http://homeserver.mariosilvaprada.com/library/:splat"
   query = {path = ":path"}
   status = 200
