--- a/package.json
+++ b/package.json
@@ -56,5 +56,6 @@
     "@types/react-redux": "^7.1.23",
     "@types/styled-components": "^5.1.24",
     "@types/styled-system": "^5.1.15"
-  }
+  },
+  "homepage": "."
 }
