--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.11",
     "@types/react-lazy-load-image-component": "^1.5.2",
     "@types/react-redux": "^7.1.23",
     "@types/styled-components": "^5.1.24",
